fix: left spacing with imminent timers

--- a/project/parttofe/partto/src/components/Timer/Ring/Ring.module.scss
+++ b/project/parttofe/partto/src/components/Timer/Ring/Ring.module.scss
@@ -7,7 +7,9 @@
 }
 
 .hide {
-  display: none;
+  width: 16px;
+  opacity: 0;
+  z-index: -5;
 }
 
 .show {
